--- a/www/templates/main.html
+++ b/www/templates/main.html
@@ -1,4 +1,22 @@
-<div style="position: fixed;top:0; width: 100%;height: 60px; background: darkgrey">
-    <span style="position:absolute;left:40px;top:10px;color: #ffffff; font-size: 30px; text-shadow: #000000 0px 0px 5px" >TaskManager</span>
-    <div style="position: absolute;right: 20px;bottom: 10px">{{test}}</div>
+<div class="header">
+    <div class="header_wrapper">
+        <div class="header_title text_title"
+             ng-click="home()">TaskManager
+        </div>
+
+        <div class="header_content" ng-show="!isAuth()">
+            <button class="btn btn-lg" ng-click="logIn()">LogIn</button>
+        </div>
+
+        <div style="position:absolute;right:120px;top:20px" ng-show="isAuth()">Hello {{user.firstName}} {{user.secondName}}!</div>
+
+        <div class="header_content" ng-show="isAuth()">
+            <button class="btn btn-lg" ng-click="logOut()">LogOut</button>
+        </div>
+    </div>
+</div>
+<div class="container container_wrap" style="margin-top: 60px; background:#eeeeee" >
+    <div ui-view></div>
+    <div class="view_container" ui-view="preView"></div>
+    <div class="view_container" ui-view="mainView"></div>
 </div>
