--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -1,4 +1,8 @@
 <div style="text-align: center">
+    <div style="padding: 10px;border-radius: 10px;background: #cbcbcb;margin-top: 20px">
+        To start working with application you need SignUp or LogIn
+    </div>
+
     <form name="signUpForm" ng-submit="signUp()" novalidate>
 
         <label for="email">Login(e-mail): </label>
