--- a/www/templates/main.html
+++ b/www/templates/main.html
@@ -19,4 +19,5 @@
     <div ui-view></div>
     <div class="view_container" ui-view="preView"></div>
     <div class="view_container" ui-view="mainView"></div>
+    <div class="view_container" ui-view="createTask"></div>
 </div>
