--- a/www/templates/mainView.html
+++ b/www/templates/mainView.html
@@ -1,8 +1,7 @@
+<div style="text-align: center">
+    <button style="background: darkgrey;font-size: 20px;padding: 5px" class="btn-lg text_title" ng-click="newTask()">New Task</button>
+</div>
 
 <div ng-repeat="task in user.tasks">
     {{task.name}}
-</div>
-
-<div style="text-align: center">
-    <button style="background: darkgrey" class="btn-lg text_title" ng-click="newTask()">New Task</button>
 </div>
