--- a/www/css/index.css
+++ b/www/css/index.css
@@ -9,6 +9,7 @@
     width: 100%;
     height: 60px;
     background: darkgrey;
+    z-index: 100;
 }
 
 .header_wrapper {
@@ -36,9 +37,9 @@
 
 }
 
-input,select{
+input, select {
     width: 60%;
-    height: 50px!important;
+    height: 50px !important;
 }
 
 label {
@@ -62,6 +63,80 @@ body {
 input.has-error, input.ng-invalid-match, input.ng-invalid-minlength, input.ng-invalid-maxlength {
     border: 2px solid #A83D38;
 }
-.error{
+
+.error {
     color: #A83D38;
+}
+
+.in_progress {
+    background: rgba(173, 255, 48, 0.16);
+}
+
+.pending {
+    background: rgba(255, 255, 0, 0.19);
+}
+
+.completed {
+    background: rgba(214, 97, 97, 0.20);
+}
+
+.prev_progress, .prev_pending, .prev_completed {
+    position: absolute;
+    height: 20px;
+    left: 5px;
+    right: 5px;
+    font-size: 15px;
+    cursor: pointer;
+}
+
+.prev_line {
+    position: absolute;
+    top: 2px;
+    bottom: 2px;
+    left: 25px;
+    border: 1px solid grey;
+    border-radius: 5px;
+}
+
+.prev_progress {
+    top: 5px;
+
+}
+
+.prev_progress .prev_line {
+    background: #adff30;
+    width: 100px;
+}
+
+.prev_pending {
+    top: 30px;
+}
+
+.prev_pending .prev_line {
+    background: #ffff00;
+    width: 50px;
+}
+
+.prev_completed {
+    top: 55px;
+}
+
+.prev_completed .prev_line {
+    background: #d66161;
+    width: 20px;
+}
+
+.prev_wrapper {
+    width: 20px;
+    text-align: right;
+}
+.prev_title{
+    position: absolute;
+    top:0px;
+    left:130px;
+    background: #eeeeee;
+    font-size: 10px;
+    padding: 3px;
+    border-radius: 5px;
+    border: 1px solid grey;
 }
