--- a/www/templates/preView.html
+++ b/www/templates/preView.html
@@ -1,3 +1,41 @@
+<div class="container_wrap" style="position:relative;margin:auto;width: 70%;height: 100px;background: #dadada">
+    <div style="position: absolute;top:10px;bottom: 10px;left: 10px;width: 220px">
 
-    <div style="width: 100%;height: 100px;background: red">
+        <div class="prev_progress">
+
+            <div class="prev_wrapper">
+                20
+            </div>
+
+            <div class="prev_line">&nbsp</div>
+
+            <div class="prev_title">In Progress</div>
+
+        </div>
+
+        <div class="prev_pending">
+            <div class="prev_wrapper">
+                15
+            </div>
+
+            <div class="prev_line">&nbsp</div>
+
+            <div class="prev_title">Pending</div>
+
+        </div>
+
+        <div class="prev_completed">
+            <div class="prev_wrapper">
+                6
+            </div>
+
+            <div class="prev_line">&nbsp</div>
+
+            <div class="prev_title">Completed</div>
+
+        </div>
+
     </div>
+
+
+</div>
