finished near by

--- a/www/css/index.css
+++ b/www/css/index.css
@@ -15,6 +15,7 @@
 .header_wrapper {
     position: relative;
     width: 80%;
+    min-width: 600px;
     margin: auto;
 }
 
@@ -39,25 +40,38 @@
 
 input, select {
     width: 60%;
-    height: 50px !important;
+    height: 40px !important;
+    padding: 8px 12px;
+    border-radius: 10px;
+    border: 1px solid grey;
 }
 
 label {
-    font-size: 20px;
+    /*font-size: 20px;*/
     margin-top: 20px;
-    width: 250px;
+    width: 180px;
 }
 
 body {
-    font-size: 20px;
+    font-size: 15px;
     color: #404142;
     font-family: verdana, sans-serif;
+}
+
+textarea {
+    width: 60%;
+    height: 100px;
+    margin-top: 10px;
+    border: 1px solid gray;
+    border-radius: 10px;
+    padding: 10px 16px;;
 }
 
 .container_wrap {;
     box-shadow: 0 10px 10px -10px rgba(0, 0, 0, .7);
     -webkit-box-shadow: 0 10px 10px -10px rgba(0, 0, 0, .7);
     border-radius: 20px;
+    min-width: 600px;
 }
 
 input.has-error, input.ng-invalid-match, input.ng-invalid-minlength, input.ng-invalid-maxlength {
@@ -105,7 +119,6 @@ input.has-error, input.ng-invalid-match, input.ng-invalid-minlength, input.ng-in
 
 .prev_progress .prev_line {
     background: #adff30;
-    width: 100px;
 }
 
 .prev_pending {
@@ -114,7 +127,6 @@ input.has-error, input.ng-invalid-match, input.ng-invalid-minlength, input.ng-in
 
 .prev_pending .prev_line {
     background: #ffff00;
-    width: 50px;
 }
 
 .prev_completed {
@@ -123,20 +135,63 @@ input.has-error, input.ng-invalid-match, input.ng-invalid-minlength, input.ng-in
 
 .prev_completed .prev_line {
     background: #d66161;
-    width: 20px;
 }
 
 .prev_wrapper {
     width: 20px;
     text-align: right;
 }
-.prev_title{
+
+.prev_title {
     position: absolute;
-    top:0px;
-    left:130px;
+    top: 0px;
+    left: 130px;
     background: #eeeeee;
     font-size: 10px;
     padding: 3px;
     border-radius: 5px;
     border: 1px solid grey;
+}
+
+.btn_function {
+    background: darkgrey;
+    font-size: 20px;
+    padding: 10px;
+    border-radius: 15px;
+}
+
+.ileft {
+    position: absolute;
+    padding: 6px;
+}
+
+.iright {
+    position: absolute;
+    right: 0px;
+    padding: 6px;
+    color: #d0dfa8;
+}
+
+.glyph {
+    color: #575757;
+    font-size: 25px;
+    float: left;
+    cursor: pointer;
+}
+
+.item_task {
+    margin: 5px;
+    padding: 10px;
+    border-radius: 10px;
+    border: 1px solid gray;
+    overflow: hidden;
+    cursor: pointer;
+
+}
+
+.item_task:hover {
+    background: rgba(141, 148, 108, 0.30);
+}
+.item_task:active{
+    border: 2px solid gray;
 }
