--- a/www/templates/newTask.html
+++ b/www/templates/newTask.html
@@ -4,20 +4,20 @@
     </div>
 
     <label for="caption">Caption: </label>
-    <input class="input-lg" type="text" ng-model="task.name" id="caption"
+    <input class="" type="text" ng-model="task.name" id="caption"
            ng-class="{'has-error': nameEmpty}"
            placeholder="Name of Task"/><br/>
 
     <label for="state">State: </label>
-    <select id="state" class="input-lg" ng-model="task.state"
+    <select id="state" class="" ng-model="task.state"
             ng-class="{'in_progress':task.state=='In Progress','pending':task.state=='Pending','completed':task.state=='Completed'}">
         <option selected>In Progress</option>
         <option>Pending</option>
         <option>Completed</option>
-    </select>
+    </select><br/>
 
     <label for="description">Description: </label>
-    <textarea style="width: 60%;height: 100px;margin-top: 10px" class="input-lg" id="description"
+    <textarea style="width: 60%;height: 100px;margin-top: 10px" class="" id="description"
               ng-model="task.description" placeholder="Description your Task"></textarea>
 
 
@@ -27,6 +27,7 @@
     </div>
 
     <br/>
-    <button style="background: darkgrey;font-size: 20px;padding: 5px" class="btn-lg text_title" ng-click="createTask()">Create Task</button>
+    <button  class="btn-lg text_title btn_function" ng-click="createTask()">Create Task</button>
+    <button  class="btn-lg text_title btn_function" ng-click="cancel()">Cancel</button>
 
 </div>
