--- a/www/templates/preView.html
+++ b/www/templates/preView.html
@@ -1,10 +1,11 @@
-<div class="container_wrap" style="position:relative;margin:auto;width: 70%;height: 100px;background: #dadada">
-    <div style="position: absolute;top:10px;bottom: 10px;left: 10px;width: 220px">
+<div class="container_wrap"
+     style="position:relative;margin:auto;width: 70%;min-width:500px;height: 100px;background: #dadada">
+    <div style="position: absolute;top:10px;bottom: 10px;left: 10px;width: 220px" calculatetasks>
 
-        <div class="prev_progress">
+        <div class="prev_progress" ng-click="taskDisplay(1)">
 
             <div class="prev_wrapper">
-                20
+                {{numProgress}}
             </div>
 
             <div class="prev_line">&nbsp</div>
@@ -13,9 +14,9 @@
 
         </div>
 
-        <div class="prev_pending">
+        <div class="prev_pending" ng-click="taskDisplay(2)">
             <div class="prev_wrapper">
-                15
+                {{numPending}}
             </div>
 
             <div class="prev_line">&nbsp</div>
@@ -24,15 +25,31 @@
 
         </div>
 
-        <div class="prev_completed">
+        <div class="prev_completed" ng-click="taskDisplay(3)">
             <div class="prev_wrapper">
-                6
+                {{numCompleted}}
             </div>
 
             <div class="prev_line">&nbsp</div>
 
             <div class="prev_title">Completed</div>
 
+        </div>
+
+    </div>
+
+    <div style="position: absolute;top:10px;bottom: 10px;left: 240px;right: 20px;text-align: center">
+
+        <i class="ileft glyphicon glyphicon-search glyph" ng-click="search()"></i>
+        <input class="" style="width: 100%;padding-left: 40px;padding-right: 35px" type="text" ng-model="task.name" id="caption"
+               placeholder="Name of Task to Search"/>
+        <i class="iright glyphicon glyphicon-remove-circle glyph" ng-click="clear()"></i>
+        <br/>
+
+        <div style="text-align: center">
+            <button style="padding: 5px; font-size: 15px; margin-top: 5px" class="btn-lg text_title btn_function"
+                    ng-click="newTask()">New Task
+            </button>
         </div>
 
     </div>
