--- a/www/templates/preView.html
+++ b/www/templates/preView.html
@@ -1,6 +1,6 @@
 <div class="container_wrap"
      style="position:relative;margin:auto;width: 70%;min-width:500px;height: 100px;background: #dadada">
-    <div style="position: absolute;top:10px;bottom: 10px;left: 10px;width: 220px" calculatetasks>
+    <div class="calcTask" style="position: absolute;top:10px;bottom: 10px;left: 10px;width: 220px" calculatetasks >
 
         <div class="prev_progress" ng-click="taskDisplay(1)">
 
